# cheatsheet

./: environment.yml  pyproject.toml
notebooks/: cheatsheet.ipynb
src/contributions/: binary.py  regression.py
src/visualizations/: boxplot.py  correlation.py  pie.py  scatter.py
src/xgboost/: __init__.py  classifier.py  regressor.py
tests/: conftest.py
tests/contributions/: test_regression.py
tests/xgboost/: test_classifier.py  test_regressor.py
