[tool.poetry]
name = "cheatsheet"
version = "0.1.0"
description = ""
authors = ["Valentin Gerbet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "^2.1.1"
jupyter = "^1.0.0"
plotly = "^5.17.0"
altair = "^5.1.1"
scikit-learn = "^1.3.1"
optuna = "^3.3.0"
black = "^23.9.1"
seaborn = "^0.12.2"
xgboost = "^2.0.0"
causalgraphicalmodels = "^0.0.4"
missingno = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
